fix social media icon align in IE (#1627)

--- a/src/targets/beacon/styles/views/Footer/index.less
+++ b/src/targets/beacon/styles/views/Footer/index.less
@@ -54,7 +54,7 @@ footer {
 
 
 .Footer__social--icons {
-  li {
+  li:not(:first-child) {
     display: inline;
   }
   span {
